Update Avatar FXs
Added js for avatar to follow mouse

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -149,6 +149,17 @@ ul {
     justify-content: center;
 }
 
+.rotate-fx-con {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.rotate-fx {
+    perspective: 100px;
+    transform-style: preserve-3d;
+}
+
 #projects {
     background-color: aquamarine;
 }
