--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -206,7 +206,7 @@ ul {
     border: none;
     background-color: blueviolet;
     color: white;
-    padding: 7px;
+    padding: 0;
     border-radius: 5px;
     font-weight: 600;
     font-size: 17px;
