--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -206,11 +206,12 @@ ul {
     border: none;
     background-color: blueviolet;
     color: white;
-    padding: 0;
+    padding-left: 5px;
+    padding-right: 5px;
     border-radius: 5px;
     font-weight: 600;
     font-size: 17px;
-    width: 10%;
+    max-width: min-content;
     height: 35px;
 }
 
