--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -32,6 +32,7 @@ ul {
     font-size: 16px;
     text-decoration: none;
     padding-top: 10px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.143);
 }
 
 /* #contact-link {
