--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,10 +1,19 @@
+/* Ensure padding and border are included in element's width and height */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden; /* Hide horizontal overflow */
 }
 
 body {
     margin: 0;
-    font-family:  'Montserrat', Helvetica, Arial, sans-serif;
+    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+    overflow-x: hidden; /* Hide horizontal overflow */
 }
 
 ul {
@@ -131,6 +140,7 @@ ul {
     text-align: center;
     margin: auto;
     justify-content: center;
+    overflow-x: hidden; /* Prevent horizontal overflow */
 }
 
 .two-columns {
@@ -179,6 +189,7 @@ ul {
 #welcome {
     background-color: blueviolet;
     text-align: center;
+    width: 100%;
 }
 
 #welcome p {
@@ -194,6 +205,7 @@ ul {
 #about {
     background-color: rgb(18, 22, 33);
     color: white;
+    width: 100%;
 }
 
 .about-text {
@@ -248,6 +260,7 @@ ul {
 #projects {
     background-color: aquamarine;
     position: relative;
+    width: 100%;
 }
 
 .projects-text {
@@ -352,6 +365,7 @@ ul {
     text-decoration: none;
     height: 50px;
     margin: 0;
+    width: 100%;
 }
 
 #my-footer > p {
