--- a/css/project_page.css
+++ b/css/project_page.css
@@ -37,6 +37,7 @@
     width: 100%;
     padding-bottom: 1px;
 }
+
 .intro-img {
     margin-bottom: 30px;
     text-align: center;
@@ -45,18 +46,46 @@
 }
 
 .intro-title {
+    margin: 0 10px;
     text-align: center;
+    text-wrap: wrap;
+    line-height: 0.85;
 }
 
 .intro-row {
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
     margin-top: 20px;
 }
 
+/* Responsive styles */
+@media (min-width: 769px) {
+    .intro-row {
+        flex-direction: row;
+    }
+    .intro-col {
+        margin: 0 15px;
+    }
+    .design-p {
+        margin: 0 15px;
+    }
+}
+
+@media (max-width: 768px) {
+    .intro-row {
+        flex-direction: column;
+    }
+    .intro-col {
+        margin: 0 25px;
+    }
+    .design-p {
+        margin: 0 25px;
+    }
+}
+
 .intro-col {
     flex: 1;
-    margin: 0 10px;
 }
 
 .intro-col-h {
@@ -66,9 +95,15 @@
 
 .mobile-img-con {
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     margin-top: 50px;
+    width: 100%;
+}
 
+.design-p {
+    margin: 0 25px;
 }
 
 .design-img {
